# Backprop-MPDM_torch

./: .gitignore  CMakeLists.txt  LICENSE  NN  README.md  Untitled.ipynb  autograd_Test.ipynb  force_attract.py  force_attract_with_dest.py  forward.py  hsfm + nn.ipynb  package.xml  temp.py  test.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Hp_log_big_TRPO/: events.out.tfevents.1582135072.robot
hp_tuning/: events.out.tfevents.1582141758.robot.26384.0  events.out.tfevents.1582144158.robot.30078.0
hp_tuning_1/: events.out.tfevents.1582144169.robot.30114.0  events.out.tfevents.1582146548.robot.2764.0  events.out.tfevents.1582146568.robot.2849.0  events.out.tfevents.1582184650.robot.13199.0  events.out.tfevents.1582184707.robot.13608.0  events.out.tfevents.1582184882.robot.14659.0  events.out.tfevents.1582184903.robot.14801.0  events.out.tfevents.1582184987.robot.15334.0  events.out.tfevents.1582186048.robot.21876.0  events.out.tfevents.1582186084.robot.22106.0  events.out.tfevents.1582186218.robot.23075.0  events.out.tfevents.1582186530.robot.25092.0
include/: global_planner.h  path_planner.h  path_simplifier.h  priority_point.h
launch/: fake_publisher.launch  map_server.launch  rviz.launch
mesh/: robot2.stl
msg/: Learning.msg  Ped.msg  Peds.msg  Propagation.msg
resource/: labmap.yaml  map.yaml  rviz.rviz  testmap.yaml
scripts/: Param.py  TODO  Visualizer.py  Visualizer2.py  backprop.ipynb  dataloader.py  evaluate_model.py  fake_publicator.py  force_attract_with_dest.py  forward.py  hsfm + nn.ipynb  lstm_datagen.py  model.pth  mpdm.py  node.py  optimisation.py  optimization.py  statistics.py  temp.py  test.py  test_slstm.py  utils.py  validation.py  validation_result.txt  visualiser.py  visualizer.py
src/: develop.cpp  global_planner.cpp  path_planner.cpp  (+1 more)
(+3325 files in other folders)
